force-app/main/default/objects/Vehicle_Purchase_Order__c/Vehicle_Purchase_Order__c.object-meta.xml
<CustomObject>
    <label>Vehicle Purchase Order</label>
    <nameField>
        <displayFormat>PO-{YYYY}{MM}-{00000}</displayFormat>
        <label>Vehicle Purchase Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Purchase Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>