force-app/main/default/objects/Vehicle_Purchase_Order__c/fields/PI_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>PI_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PI Uploaded?</label>
    <type>Checkbox</type>
</CustomField>