force-app/main/default/objects/Vehicle_Purchase_Order__c/fields/PO_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Approved_Date__c</fullName>
    <label>PO Approved Date</label>
    <type>Date</type>
</CustomField>