force-app/main/default/objects/Vehicle_Purchase_Order__c/fields/Production_Month__c.field-meta.xml
<CustomField>
    <fullName>Production_Month__c</fullName>
    <inlineHelpText>Input first day of the month</inlineHelpText>
    <label>Production Month</label>
    <required>true</required>
    <type>Date</type>
</CustomField>