force-app/main/default/objects/Vehicle_Purchase_Order__c/fields/TMS_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>TMS_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMS Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Vehicle Purchase Orders</relationshipLabel>
    <relationshipName>Vehicle_Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>