force-app/main/default/objects/Vehicle_Purchase_Order__c/fields/Total_PO_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_Value__c</fullName>
    <label>Total PO Value</label>
    <summarizedField>Vehicle_Purchase_Order_Line_Items__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Vehicle_Purchase_Order_Line_Items__c.Vehicle_Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>