force-app/main/default/objects/Vehicle_Purchase_Order__c/fields/Total_Units_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Confirmed__c</fullName>
    <label>Total Units Confirmed</label>
    <summarizedField>Vehicle_Purchase_Order_Line_Items__c.Units_Confirmed__c</summarizedField>
    <summaryForeignKey>Vehicle_Purchase_Order_Line_Items__c.Vehicle_Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>