force-app/main/default/objects/Vehicle_Purchase_Order__c/fields/Total_Units_Pending__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Pending__c</fullName>
    <formula>Total_Units_Ordered__c -  Total_Units_Cancelled__c  - Total_Units_Confirmed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Units Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>