force-app/main/default/objects/Vehicle_Purchase_Order__c/recordTypes/MF_PO.recordType-meta.xml
<RecordType>
    <fullName>MF_PO</fullName>
    <active>true</active>
    <label>MF/DPS PO</label>
</RecordType>