force-app/main/default/objects/Vehicle_Purchase_Order__c/validationRules/Only_Sales_Admin_can_edit_Closed_VPO.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Sales_Admin_can_edit_Closed_VPO</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
( 
 NOT(ISNEW()), 
 AND( 
       $Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
					  $Profile.Name &lt;&gt; &apos;KIAPC Sales Admin&apos; 
      ),
 ISPICKVAL(PRIORVALUE(Stage__c), &apos;Closed&apos;)
)</errorConditionFormula>
    <errorMessage>Only Sales Admin can update Vehicle PO when Stage is Closed.</errorMessage>
</ValidationRule>