force-app/main/default/objects/Vehicle_Purchase_Order__c/validationRules/PO_is_cancelled_then_cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_is_cancelled_then_cannot_be_edited</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
    NOT(ISNEW()),
    ISPICKVAL(PRIORVALUE(Stage__c), &apos;Cancelled&apos;),
				$Profile.Name != &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>After PO stage is cancelled, PO and POLI cannot be edited or reverted to previous stage.</errorMessage>
</ValidationRule>