force-app/main/default/objects/Vehicle_Purchase_Order__c/validationRules/Production_Month_is_1st_day_of_month.validationRule-meta.xml
<ValidationRule>
    <fullName>Production_Month_is_1st_day_of_month</fullName>
    <active>true</active>
    <errorConditionFormula>DAY(Production_Month__c) &lt;&gt; 1</errorConditionFormula>
    <errorMessage>The Production Month Must Be the 1st Day of the Month.</errorMessage>
</ValidationRule>