force-app/main/default/objects/Vehicle_Purchase_Order__c/validationRules/Stage_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Stage__c))</errorConditionFormula>
    <errorMessage>Stage can not be emptied</errorMessage>
</ValidationRule>