force-app/main/default/objects/Vehicle_Purchase_Order__c/validationRules/User_need_to_input_reason_for_cancel_VPO.validationRule-meta.xml
<ValidationRule>
    <fullName>User_need_to_input_reason_for_cancel_VPO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Stage__c , &quot;Cancelled&quot;),ISBLANK( Cancellation_Reason__c ))</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Please input cancellation reason.</errorMessage>
</ValidationRule>