force-app/main/default/objects/Vehicle_Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Franchise_Code__c</columns>
    <columns>Production_Month__c</columns>
    <columns>Supplier_Account__c</columns>
    <columns>PO_Approved_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>PI_Uploaded__c</columns>
    <columns>Total_Units_Confirmed__c</columns>
    <columns>Total_Units_Ordered__c</columns>
    <columns>Total_Units_Cancelled__c</columns>
    <columns>Total_Units_Pending__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Currency_Code__c</columns>
    <columns>Total_PO_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>