force-app/main/default/objects/Vehicle_Purchase_Order__c/listViews/Approved_KIAPC.listView-meta.xml
<ListView>
    <fullName>Approved_KIAPC</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>PO_Approved_Date__c</columns>
    <columns>Production_Month__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Franchise_Code__c</field>
        <operation>equals</operation>
        <value>KIAPC</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved - KIAPC</label>
</ListView>