force-app/main/default/objects/Vehicle_Purchase_Order__c/listViews/VPO_with_Pending_Orders.listView-meta.xml
<ListView>
    <fullName>VPO_with_Pending_Orders</fullName>
    <columns>NAME</columns>
    <columns>Franchise_Code__c</columns>
    <columns>Production_Month__c</columns>
    <columns>PO_Approved_Date__c</columns>
    <columns>Total_Units_Pending__c</columns>
    <columns>Remarks__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Units_Pending__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>VPO with Pending Orders</label>
</ListView>